ajustes na imagem do topo (iphone)
Safari não estava exibindo a imagem.

--- a/guia/css/style.css
+++ b/guia/css/style.css
@@ -37,7 +37,8 @@
   height: 100vh;
   background-attachment: fixed;
   background-size: cover;
-  background-image: var(--bg-header);
+  background: var(--bg-header);
+
 }
 
 .bg-topo {
