--- a/guia/css/style.css
+++ b/guia/css/style.css
@@ -35,7 +35,7 @@
   /* background-size: cover;
   position: relative; */
   height: 100vh;
-  background-image: url(../img/bg-header.jpg); 
+  background-image: var(--bg-header); /*url(../img/bg-header.jpg);*/ 
   background-size:cover;
   /* background: var(--bg-header) !important; 
   background-position:center !important; 
