ajustes no menu dos tópicos

--- a/guia/css/style.css
+++ b/guia/css/style.css
@@ -421,7 +421,8 @@ b, strong {font-weight: 700;}
   top: 30px !important;
   border: 1px solid #e8edee;
   overflow-x:hidden;
-  height: 60vh;
+  height: auto;
+  max-height: 400px;  
 }
 
 @media (min-width:992px){
