Ajustes de bugs no html e css + inserção de cards lado a lado

--- a/guia/css/style.css
+++ b/guia/css/style.css
@@ -570,23 +570,31 @@ b, strong {font-weight: 700;}
   #abertura.programa .intro-text{padding-top:110px;}
 }
 
+#abertura h1,
 #abertura h2 {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
   text-transform:uppercase;
   margin: 30px 0;
   padding: 0 15px;
-  font-size: 1.75rem;
   font-weight: 700;
   line-height: 1.25;
 }
 
+
+#abertura h1 {font-size: 2.3rem;}
+#abertura h2 {font-size: 1.75rem;}
+
+#abertura h1 span,
 #abertura h2 span {
   font-weight:300;
   font-style: italic;
 }
 
 @media (max-width:320px) {
+
+  #abertura h1 {font-size:1.65rem}
+
   #abertura h2 {font-size:1.5rem}
 }
 
@@ -598,6 +606,7 @@ b, strong {font-weight: 700;}
 }
 
 @media (min-width: 768px) {
+  #abertura h1 {font-size: 2.2rem}
   #abertura h2 {
     font-size: 2rem;
     line-height: 1;
@@ -605,6 +614,7 @@ b, strong {font-weight: 700;}
 }
 
 @media (min-width: 929px) {
+  #abertura h1 {font-size: 2.7rem}
   #abertura h2 {
     font-size: 2.5rem;
   }
