--- a/guia/css/style-visual-resources.css
+++ b/guia/css/style-visual-resources.css
@@ -1425,8 +1425,6 @@ Podcast
   }
 }
 
-
-
 /* -------------------------------- 
 
 Quadro de comparação
@@ -3093,261 +3091,252 @@ FLIPCARD 2.0
 
  -----------------------------*/
 
-  .flip-card {
-    position: relative;
-    background-color: transparent;
-    width: 100%;
-    height: 420px;
-    border: none;
-    -webkit-perspective: 1000px;
-    perspective: 1000px;
-    margin-bottom: 1.5rem;
-  }
+ .flip-card {
+  position: relative;
+  background-color: transparent;
+  width: 100%;
+  height: 420px;
+  border: none;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  margin-bottom: 1.5rem;
+}
 
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    -webkit-transition: -webkit-transform 0.8s;
-    transition: -webkit-transform 0.8s;
-    transition: transform 0.8s;
-    transition: transform 0.8s, -webkit-transform 0.8s;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
 
-  .flip-card .more {
-    display: none;
-  }
+.flip-card .more {
+  display: none;
+}
 
-  .flip-card .more:checked~.flip-card-inner {
-    -ms-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-  }
+.flip-card .more:checked~.flip-card-inner {
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
 
-  /*.flip-card:hover .flip-card-inner {
-   -webkit-transform:rotateY(180deg);
-   transform:rotateY(180deg)
-  }*/
+/*.flip-card:hover .flip-card-inner {
+ -webkit-transform:rotateY(180deg);
+ transform:rotateY(180deg)
+}*/
 
-  .flip-card .btn-front {
-    opacity: 1;
-    -webkit-transition: opacity .5s linear;
-    transition: opacity .5s linear
-  }
+.flip-card .btn-front {
+  opacity: 1;
+  -webkit-transition: opacity .5s linear;
+  transition: opacity .5s linear
+}
 
-  .flip-card:hover .btn-front {
-    opacity: 0;
-    -webkit-transition-duration: .2s;
-    transition-duration: .2s
-  }
+.flip-card:hover .btn-front {
+  opacity: 0;
+  -webkit-transition-duration: .2s;
+  transition-duration: .2s
+}
 
-  .flip-card-front,
-  .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    padding: 1.25rem;
-  }
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  padding: 1.25rem;
+}
 
-  .flip-card-front {
-    background-color: var(--laranja);
-    border-radius: 10px;
-    -webkit-box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
-    box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
-  }
+.flip-card-front {
+  background-color: var(--laranja);
+  border-radius: 10px;
+  -webkit-box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
+}
 
-  .flip-card-front h3 {
-    border-bottom: none;
-    margin-bottom: .3em;
-    text-transform: uppercase;
-    letter-spacing: 0.05em;
-    color: #fff;
-    font-weight: 700;
-    text-shadow: 0 0 6px rgba(0, 0, 0, .1);
-    text-align: center;
-    font-size: 1.2em;
-    position: relative;
-  }
+.flip-card-front h3 {
+  border-bottom: none;
+  margin-bottom: .3em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: 0 0 6px rgba(0, 0, 0, .1);
+  text-align: center;
+  font-size: 1.2em;
+  position: relative;
+}
 
-  .flip-card-back {
-    background-color: #fff;
-    border-radius: 10px;
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-    -webkit-box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
-    box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3)
-  }
+.flip-card-back {
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  -webkit-box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.3)
+}
 
-  .flip-card-back h4 {
-    font-weight: 600;
-  }
+.flip-card-back h4 {
+  font-weight: 600;
+}
 
-  .flip-card .button {
-    -ms-grid-row: -1;
-    grid-row: -1;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: 600;
-    cursor: pointer;
-    display: block;
-    padding: 0 1.5em;
-    height: 3em;
-    line-height: 2.9em;
-    min-width: 3em;
-    background-color: transparent;
-    border: 2px solid #fff;
-    color: #fff;
-    border-radius: 4px;
-    text-align: center;
-    left: 50%;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-    text-shadow: 0 0 6px rgba(0, 0, 0, .3);
-  }
+.flip-card .button {
+  -ms-grid-row: -1;
+  grid-row: -1;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 600;
+  cursor: pointer;
+  display: block;
+  padding: 0 1.5em;
+  height: 3em;
+  line-height: 2.9em;
+  min-width: 3em;
+  background-color: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  left: 50%;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  text-shadow: 0 0 6px rgba(0, 0, 0, .3);
+}
 
-  .flip-card .flip-card-front .button {
-    /*position: relative;
-    top:50%;
-    left: 25%;*/
-    width: 80%;
-    height: auto;
-    padding: 1rem;
-    margin: 0 auto;
-  }
+.flip-card .flip-card-front .button {
+  /*position: relative;
+  top:50%;
+  left: 25%;*/
+  width: 80%;
+  height: auto;
+  padding: 1rem;
+  margin: 0 auto;
+}
 
-  .flip-card .flip-card-front .button svg {
-    fill: #fff;
-    width: 40%;
-  }
+.flip-card .flip-card-front .button svg {
+  fill: #fff;
+  /* width: 40%; */
+  width: 3rem;
+}
 
-  .flip-card .flip-card-front .button {
-    grid-column: 1/-1;
-    justify-self: center;
-  }
+.flip-card .flip-card-front .button {
+  grid-column: 1/-1;
+  justify-self: center;
+}
 
-  .flip-card .button:hover {
-    background-color: #fff;
-    text-shadow: none;
-  }
+.flip-card .button:hover {
+  background-color: #fff;
+  text-shadow: none;
+}
 
-  .flip-card .button.return {
-    line-height: 3em;
-    color: var(--laranja);
-    border-color: var(--laranja);
-    text-shadow: none;
-  }
+.flip-card .button.return {
+  line-height: 3em;
+  color: var(--laranja);
+  border-color: var(--laranja);
+  text-shadow: none;
+}
 
-  .flip-card .button.return:hover {
-    background-color: var(--laranja-over);
-    border-color: var(--laranja-over);
-    color: #fff;
-    box-shadow: none;
-  }
+.flip-card .button.return:hover {
+  background-color: var(--laranja-over);
+  border-color: var(--laranja-over);
+  color: #fff;
+  box-shadow: none;
+}
 
-  .flip-card .card-text {
-    text-align: left;
-    margin-bottom: 10px;
-    overflow-y: scroll;
-    height: 260px;
-    padding: 1rem;
-  }
+.flip-card .card-text {
+  text-align: left;
+  margin-bottom: 10px;
+  overflow-y: scroll;
+  height: 190px;
+  padding: 1rem;
+}
 
-  /* Customização do scroll: Para Firefox e edge*/
-  .flip-card .card-text {
-    scrollbar-width: thin;
-    scrollbar-color: var(--laranja) #f1f1f1;
-  }
+/* Customização do scroll: Para Firefox e edge*/
+.flip-card .card-text {
+  scrollbar-width: thin;
+  scrollbar-color: var(--laranja) #f1f1f1;
+}
 
-  /* Customização do scroll: Para Chrome e Safari*/
-  .flip-card .card-text::-webkit-scrollbar {width: 5px;}
+/* Customização do scroll: Para Chrome e Safari*/
+.flip-card .card-text::-webkit-scrollbar {width: 5px;}
 
-  .flip-card .card-text::-webkit-scrollbar-track {background: #f1f1f1;}
+.flip-card .card-text::-webkit-scrollbar-track {background: #f1f1f1;}
 
-  .flip-card .card-text::-webkit-scrollbar-thumb {background: var(--laranja);}
+.flip-card .card-text::-webkit-scrollbar-thumb {background: var(--laranja);}
 
-  .flip-card .card-text::-webkit-scrollbar-thumb:hover {background: var(--laranja-over);}
+.flip-card .card-text::-webkit-scrollbar-thumb:hover {background: var(--laranja-over);}
 
-  .flip-card .card-text ul {
-    list-style: disc;
-  }
+.flip-card .card-text ul {
+  list-style: disc;
+}
 
-  .flip-card .card-text ul li ul {
-    list-style: circle;
-  }
+.flip-card .card-text ul li ul {
+  list-style: circle;
+}
 
-  .flip-card .card-title,
-  .flip-card .card-footer {
-    position: relative;
-  }
+.flip-card .card-title,
+.flip-card .card-footer {
+  position: relative;
+}
 
-  .flip-card .card-footer {
-    background: transparent;
-    border-top: none;
-    position: relative;
-  }
+.flip-card .card-footer {
+  background: transparent;
+  border-top: none;
+  position: relative;
+}
 
-  .flip-card .flip-card-front .card-title {
-    top: 40%;
-  }
+.flip-card .flip-card-front .card-title {
+  top: 25%;
+}
 
-  .flip-card .flip-card-front .card-footer {
-    top: 50%;
-  }
+.flip-card .flip-card-front .card-footer {
+  /* top: 40%; */
+  top:30%;
+}
+
+.flip-card .flip-card-front .card-footer .card-btn {
+  width: 70%;
+  position: absolute;
+  top: -1.5rem;
+  left: 15%;
+}
+
+.flip-card .flip-card-back .card-title {
+  font-weight: 700;
+  font-size: 0.8rem;
+  text-align: left;
+  margin: 0;
+}
+
+
+.flip-card .item1 .button:hover svg {
+  fill: var(--laranja-over);
+}
+
+@media (min-width: 992px) {
 
   .flip-card .flip-card-front .card-footer .card-btn {
-    width: 70%;
+    width: 50%;
     position: absolute;
     top: -1.5rem;
-    left: 15%;
+    left: 25%;
   }
 
-  .flip-card .flip-card-back .card-title {
-    font-weight: 700;
-    font-size: 0.8rem;
-    text-align: left;
-    margin: 0;
-  }
+}
 
-
-  .flip-card .item1 .button:hover svg {
-    fill: var(--laranja-over);
-  }
-
-  @media (min-width: 992px) {
-
-    .flip-card .flip-card-front .card-footer .card-btn {
-      width: 50%;
-      position: absolute;
-      top: -1.5rem;
-      left: 25%;
-    }
-
-  }
-
-  /*Fundos para flipcard*/
-  .flip-card .fundo1 {
-    background: linear-gradient(40deg, rgba(119, 89, 89, 0), rgba(255, 255, 255, .5)), url(../img/bg2-flipcard.jpg);
-  }
-
-  @media (min-width: 992px) {
-
-    .flip-card .flip-card-front .card-footer .card-btn {
-      width: 50%;
-      position: absolute;
-      top: -1.5rem;
-      left: 25%;
-    }
-
-  }
+/*Fundos para flipcard*/
+.flip-card .fundo1 {
+  background: linear-gradient(40deg, rgba(119, 89, 89, 0), rgba(255, 255, 255, .5)), url(../img/bg2-flipcard.jpg);
+}
