--- a/guia/css/style-visual-resources.css
+++ b/guia/css/style-visual-resources.css
@@ -345,13 +345,13 @@ blockquote {
   font-size: 17px;
 }
 
-.box-quote .quote-autor {
+.quote-autor {
   font-size: 12px;
   font-style: italic;
   margin-bottom: 0px !important;
 }
 
-.box-quote .quote-autor:before {
+.quote-autor:before {
   content: "\2014\00A0";
 }
 
@@ -593,6 +593,20 @@ Boxes de Destaque: Atenção, Saiba mais etc
   position: relative;
   top: -10px;
   font-size: 35px;
+}
+
+/* Ajuste para não sumir o ícone de headphone, quando estiver dentro de um box para escutar */
+
+.para-escutar .icon-headphones.link,
+.para-escutar .icon-headphones.link::before {
+  background:transparent;
+  border:none;
+  box-shadow: none;
+  color:var(--laranja);
+  font-size:1rem;
+  position: relative;
+  left:0;
+  top:0;
 }
 
 /* -------------------------------- 
@@ -1304,6 +1318,8 @@ Lista Simples
   margin-right: 10px;
   margin-top:0.3rem;
 }
+
+.obj-lista .list-group-item i.icon-bullet.white {background: transparent url("../img/ic-list-bullet-white.svg") no-repeat 0 0;}
 
 /* -------------------------------- 
 
